Alteraçãos do html e css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,41 @@
 <body>
     <header>
         <h1>Marca</h1>
+
+        <form action="" method="post" class="barra-pesquisa" id="form-pesquisa">
+            <input type="text" name="nome_do_carro" placeholder="Digite o Carro em busca" size="45" class="campo-pesquisa">
+            <button type="submit" class="btn-pesquisa"><i class="fas fa-search"></i></button>
+        </form>
+        <script>
+            // Impede o envio do formulário ao clicar no botão de pesquisa
+            document.getElementById('form-pesquisa').addEventListener('submit', function(event) {
+              event.preventDefault();  // Impede o comportamento padrão de envio
+              console.log("A pesquisa foi clicada, mas o envio foi bloqueado.");
+            });
+          </script>
+
         <nav class="menu">
             <ul>
                 <li><a href="#">Sobre</a></li>
                 <li class="dropdown"> <!--Classe para que o submenu deste item desça-->
                     <a href="#" class="drop-btn">Marcas</a> 
                     <ul class="submenu"> <!--Classe para que este menu tenha um sub-->
-                        <li class="submenu-item"><a href="#">Placeholder</a></li> <!--Classe de item do submenu-->
+                        <li class="submenu-item"><a href="#">BMW</a></li> <!--Classe de item do submenu-->
+                        <li class="submenu-item"><a href="#">Cadilac</a></li>
+                        <li class="submenu-item"><a href="#">Camaro</a></li>
+                        <li class="submenu-item"><a href="#">Chevrolet</a></li>
+                        <li class="submenu-item"><a href="#">Citröen</a></li>
+                        <li class="submenu-item"><a href="#">Ferrari</a></li>
+                        <li class="submenu-item"><a href="#">Fiat</a></li>
+                        <li class="submenu-item"><a href="#">Ford</a></li>
+                        <li class="submenu-item"><a href="#">Hyunday</a></li>
+                        <li class="submenu-item"><a href="#">Lexus</a></li>
+                        <li class="submenu-item"><a href="#">Nissan</a></li>
+                        <li class="submenu-item"><a href="#">Pontiac</a></li>
+                        <li class="submenu-item"><a href="#">Porsche</a></li>
+                        <li class="submenu-item"><a href="#">Renault</a></li>
+                        <li class="submenu-item"><a href="#">Toyota</a></li>
+                        <li class="submenu-item"><a href="#">VolksWagen</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Contato</a></li>
