--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
     </main>
 
     <footer>
-        <p>logo name</p>
-
-        <a href="https://github.com/MuriloHsTorres/ProjetoCarros"><i class="fa-brands fa-github"></i></a>
-
-        <p>Email: XXXXX&#64;XXXXX.XXX</p>
-        <p>Telefone: (55) +12 ZZZZZ-ZZZZ</p>
-        <p>Localização</p>
-        <p>&#169; SpeedDrive. Todos direitos reservados.</p>
+        <div>
+            <p>logo name</p>
+            <a href="https://github.com/MuriloHsTorres/ProjetoCarros"><i class="fa-brands fa-github"></i></a>
+            <p>Email: XXXXX&#64;XXXXX.XXX</p>
+            <p>Telefone: (55) +12 ZZZZZ-ZZZZ</p>
+            <p>Localização</p>
+            <p>&#169; SpeedDrive. Todos direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
