Changes in Logo and Header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Marca</h1>
+        <h1 class="logo">SpeedDrive</h1>
 
         <form action="" method="post" class="barra-pesquisa" id="form-pesquisa">
             <input type="text" name="nome_do_carro" placeholder="Digite o Carro em busca" size="45" class="campo-pesquisa">
@@ -66,11 +66,11 @@
 
     <footer>
         <div>
-            <p>logo name</p>
-            <a href="https://github.com/MuriloHsTorres/ProjetoCarros"><i class="fa-brands fa-github"></i></a>
-            <p>Email: XXXXX&#64;XXXXX.XXX</p>
-            <p>Telefone: (55) +12 ZZZZZ-ZZZZ</p>
-            <p>Localização</p>
+            <p class="logo">SpeedDrive</p>
+            <a href="https://github.com/MuriloHsTorres/ProjetoCarros" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <p>Email: speeddrive&#64;motors.com</p>
+            <p>Telefone: (55) +12 98562-2653</p>
+            <p>Localização: Rua Motors Sports 111, São Paulo, Brasil</p>
             <p>&#169; SpeedDrive. Todos direitos reservados.</p>
         </div>
     </footer>
