--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li class="dropdown"> <!--Classe para que o submenu deste item desça-->
                     <a href="#" class="drop-btn">Marcas</a> 
                     <ul class="submenu"> <!--Classe para que este menu tenha um sub-->
@@ -57,6 +57,7 @@
     <main>
         <section id="sobre">
             <div class="content">
+                <h2>Sobre</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat animi nam nobis voluptatum expedita dolorum sunt tempora voluptate suscipit amet odit odio impedit omnis eveniet, adipisci, excepturi voluptatibus distinctio modi.
                     <br>
                 Architecto dolor cupiditate vero fugit nihil enim, recusandae officiis blanditiis debitis veritatis aut vel, perspiciatis alias, eum nostrum nemo quo provident perferendis odio ipsum suscipit? In tempora delectus obcaecati reiciendis.</p>
